# Test-task-Junior-Backend

./: README.md  compose.yml
instagram-sync/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
instagram-sync/apps/posts/: models.py  serializers.py  services.py  urls.py  views.py
instagram-sync/apps/posts/migrations/: 0001_initial.py
instagram-sync/apps/posts/tests/: test_comments.py
instagram-sync/apps/sync/: services.py  urls.py  views.py
instagram-sync/config/: settings.py  urls.py
